--- a/composer.json
+++ b/composer.json
@@ -35,12 +35,13 @@
 		"doctrine/dbal": "2.3.4",
 		"symfony/doctrine-bridge": "2.*",
 		"dflydev/doctrine-orm-service-provider": "1.0.*@dev",
+        "dominikzogg/doctrine-orm-manager-registry-provider": "~1.1",
 		"symfony/yaml": "2.4.*@dev",
-                "symfony/form": "~2.3",
-                "symfony/validator":  "~2.3",
-                "symfony/config": "~2.3",
-                "symfony/translation": "~2.3",
-                "symfony/locale": "~2.3"
+        "symfony/form": "~2.3",
+        "symfony/validator":  "~2.3",
+        "symfony/config": "~2.3",
+        "symfony/translation": "~2.3",
+        "symfony/locale": "~2.3"
     },
     "autoload":	{
 		"psr-0": {
