--- a/composer.json
+++ b/composer.json
@@ -13,35 +13,34 @@
             "type": "package",
             "package": {
                 "name": "jquery/jquery",
-                "version": "1.7.2",
+                "version": "1.11.1",
                 "dist": {
-                    "url": "http://code.jquery.com/jquery-1.7.2.js",
+                    "url": "http://code.jquery.com/jquery-1.11.1.js",
                     "type": "file"
                 }
             }
         }
     ],
     "require": {
-        "jquery/jquery": "1.7.2",
-        "silex/silex": "1.*",
+        "jquery/jquery": "1.11.1",
+        "silex/silex": "2.0.*",
         "twitter/bootstrap": "2.3.*",
-        "symfony/class-loader": "2.3.",
-        "silex/web-profiler": "~1.0",
-        "symfony/twig-bridge": "~2.2",
-        "twig/twig": ">=1.8,<2.0-dev",
-        "monolog/monolog": ">=1.0.0",
-        "symfony/console": "~2.2",
-        "symfony/validator": "~2.3",
-        "doctrine/dbal": "2.3.4",
-        "symfony/doctrine-bridge": "2.*",
-        "dflydev/doctrine-orm-service-provider": "1.0.0",
-        "dominikzogg/doctrine-orm-manager-registry-provider": "~1.1",
-        "symfony/yaml": "2.4.*@dev",
-        "symfony/form": "~2.3",
-        "symfony/validator":  "~2.3",
-        "symfony/config": "~2.3",
-        "symfony/translation": "~2.3",
-        "symfony/locale": "~2.3"
+        "symfony/class-loader": "2.6.",
+        "silex/web-profiler": "1.0.*",
+        "symfony/twig-bridge": "2.6.*",
+        "twig/twig": "1.16.*",
+        "monolog/monolog": "1.11.*",
+        "symfony/console": "2.6.*",
+        "symfony/validator": "2.6.*",
+        "doctrine/dbal": "2.5.*",
+        "symfony/doctrine-bridge": "2.6.*",
+        "dflydev/doctrine-orm-service-provider": "2.0.*",
+        "dominikzogg/doctrine-orm-manager-registry-provider": "1.*",
+        "symfony/yaml": "2.6.*",
+        "symfony/form": "2.6.*",
+        "symfony/config": "2.6.*",
+        "symfony/translation": "2.6.*",
+        "symfony/locale": "2.6.*"
     },
     "autoload":    {
         "psr-0": {
