updated deps to latest versions and adjusted code to match refactoring

--- a/composer.json
+++ b/composer.json
@@ -23,10 +23,9 @@
     ],
     "require": {
         "jquery/jquery": "1.11.1",
-        "silex/silex": "2.0.*",
+        "silex/silex": "2.0.*@dev",
         "twitter/bootstrap": "2.3.*",
-        "symfony/class-loader": "2.6.",
-        "silex/web-profiler": "1.0.*",
+        "symfony/class-loader": "2.6.*",
         "symfony/twig-bridge": "2.6.*",
         "twig/twig": "1.16.*",
         "monolog/monolog": "1.11.*",
@@ -35,7 +34,7 @@
         "doctrine/dbal": "2.5.*",
         "symfony/doctrine-bridge": "2.6.*",
         "dflydev/doctrine-orm-service-provider": "2.0.*",
-        "dominikzogg/doctrine-orm-manager-registry-provider": "1.*",
+        "saxulum/saxulum-doctrine-orm-manager-registry-provider": "3.0.0",
         "symfony/yaml": "2.6.*",
         "symfony/form": "2.6.*",
         "symfony/config": "2.6.*",
