adding jquery dir

--- a/composer.json
+++ b/composer.json
@@ -52,6 +52,7 @@
             "ln -s ../../vendor/twitter/bootstrap/docs/assets/css/ web/bootstrap/css",
             "ln -s ../../vendor/twitter/bootstrap/docs/assets/img/ web/bootstrap/img",
             "ln -s ../../vendor/twitter/bootstrap/docs/assets/js/ web/bootstrap/js",
+            "mkdir -p web/js/jquery",
             "ln -s ../../../vendor/jquery/jquery/jquery-1.11.1.js web/js/jquery/jquery.js"
         ]
     }
