--- a/composer.json
+++ b/composer.json
@@ -8,38 +8,31 @@
         }
     ],
     "minimum-stability": "dev",
-    "repositories": [
-           {
-            "type": "package",
-            "package": {
-                "name": "jquery/jquery",
-                "version": "1.11.1",
-                "dist": {
-                    "url": "http://code.jquery.com/jquery-1.11.1.js",
-                    "type": "file"
-                }
-            }
-        }
-    ],
     "require": {
-        "jquery/jquery": "1.11.1",
-        "silex/silex": "2.0.*@dev",
-        "twitter/bootstrap": "2.3.*",
-        "symfony/class-loader": "2.6.*",
-        "symfony/twig-bridge": "2.6.*",
-        "twig/twig": "1.16.*",
-        "monolog/monolog": "1.11.*",
-        "symfony/console": "2.6.*",
-        "symfony/validator": "2.6.*",
-        "doctrine/dbal": "2.5.*",
-        "symfony/doctrine-bridge": "2.6.*",
-        "dflydev/doctrine-orm-service-provider": "2.0.*",
-        "saxulum/saxulum-doctrine-orm-manager-registry-provider": "3.0.0",
-        "symfony/yaml": "2.6.*",
-        "symfony/form": "2.6.*",
-        "symfony/config": "2.6.*",
-        "symfony/translation": "2.6.*",
-        "symfony/locale": "2.6.*"
+        "silex/silex":                                              "2.0.*@dev",
+        "symfony/class-loader":                                     "2.7.*",
+        "symfony/twig-bridge":                                      "2.7.*",
+        "twig/twig":                                                "1.18.*",
+        "monolog/monolog":                                          "1.11.*",
+        "symfony/console":                                          "2.7.*",
+        "symfony/validator":                                        "2.7.*",
+        "doctrine/dbal":                                            "2.5.*",
+        "symfony/doctrine-bridge":                                  "2.7.*",
+        "dflydev/doctrine-orm-service-provider":                    "2.0.*",
+        "saxulum/saxulum-doctrine-orm-manager-registry-provider":   "3.0.0",
+        "symfony/yaml":                                             "2.7.*",
+        "symfony/form":                                             "2.7.*",
+        "symfony/config":                                           "2.7.*",
+        "symfony/translation":                                      "2.7.*",
+        "symfony/locale":                                           "2.7.*",
+        "symfony/security":                                         "2.7.*",
+        "phpunit/phpunit":                                          "4.4.*@dev",
+        "symfony/browser-kit":                                      "2.7.*",
+        "useallfive/doctrine-data-fixtures-command":                "dev-master",
+        "swiftmailer/swiftmailer":                                  "5.2.2",
+        "fxp/composer-asset-plugin":                                "~1.0",
+        "bower-asset/jquery":                                       "2.1.3",
+        "bower-asset/bootstrap":                                    "3.3.4"
     },
     "autoload":    {
         "psr-0": {
@@ -49,12 +42,13 @@
     },
     "scripts": {
         "post-install-cmd": [
-            "mkdir -p web/bootstrap",
-            "ln -s ../../vendor/twitter/bootstrap/docs/assets/css/ web/bootstrap/css",
-            "ln -s ../../vendor/twitter/bootstrap/docs/assets/img/ web/bootstrap/img",
-            "ln -s ../../vendor/twitter/bootstrap/docs/assets/js/ web/bootstrap/js",
-            "mkdir -p web/js/jquery",
-            "ln -s ../../../vendor/jquery/jquery/jquery-1.11.1.js web/js/jquery/jquery.js"
+            "chmod 0777 logs/",
+            "chmod 0777 cache/"
         ]
+    },
+    "extra": {
+        "asset-installer-paths": {
+            "bower-asset-library": "web/js/lib/vendor/"
+        }
     }
 }
